# RWisecondorX

./: .Rbuildignore  .codex  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  Dockerfile  LICENSE.html  MANIFEST.in  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.WisecondorX.html  README.WisecondorX.md  README.html  README.md  Rduckhts.llm.txt  VALIDATION.html  VALIDATION.md  _pkgdown.yml  authors.html  authors.md  conda.yml  configure  index.html  index.md  llms.txt  mclust.llm.txt  pkgdown.yml  pyproject.toml  search.json  setup.cfg  sitemap.xml
R/: RcppExports.R  aaa.R  bam_stats.R  bed_reader.R  cohort.R  convert.R  mclust_utils.R  nipter_bin.R  nipter_chi.R  nipter_classes.R  nipter_control.R  nipter_control_qc.R  nipter_gaunosome_models.R  nipter_gaunosome_report.R  nipter_gaunosome_score.R  nipter_gc.R  nipter_plot.R  nipter_reference.R  nipter_regression.R  nipter_score.R  nipter_sex.R  nipter_sex_score.R  npz.R  pipeline.R  preprocess_qc.R  rwisecondorx_cbs.R  rwisecondorx_classes.R  rwisecondorx_newref.R  rwisecondorx_output.R  rwisecondorx_predict.R  rwisecondorx_ref_qc.R  rwisecondorx_utils.R  sample_metrics.R  seqff.R  simulate_bam.R  simulate_cohort.R  simulate_trisomy_cohort.R  synthetic_cohort.R  tabix_metadata.R  wisecondorx_cli.R  (+3 more)
design/: s7_class_hierarchy.md
man/: COMPRESSED_BINSIZE.Rd  CombinedControlGroup.Rd  CombinedStrandsSample.Rd  NCVTemplate.Rd  NIPTControlGroup.Rd  NIPTControlGroupQC.Rd  NIPTCorrectionPath.Rd  NIPTCorrectionRecord.Rd  NIPTCorrectionStep.Rd  NIPTGaunosomeReport.Rd  NIPTGaunosomeScore.Rd  (+122 more)
(+361 files in other folders)
